# coverage-crashkurs

./: .gitignore  CMakeLists.txt  README.md  coverage-lcov.yml
.github/workflows/: coerage-gcovr.yml
include/coverage_demo/: mode_decision.hpp  robot_state.hpp  safety_monitor.hpp
scripts/: clean_coverage.sh  generate_coverage_all.sh  generate_coverage_productive.sh
src/: mode_decision.cpp  robot_state.cpp  safety_monitor.cpp
test/: test_mode_decision.cpp  test_robot_state.cpp  test_safety_monitor.cpp
